--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godot_tools.editor_path": "c:\\Users\\manny\\Desktop\\shortcuts\\Godot_v4.0-stable_win64.exe"
+    "godot_tools.editor_path": "c:\\Users\\manny\\Desktop\\Godot_v4.0.1-stable_win64.exe"
 }
